--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,6 +1,6 @@
 {
   "showLineNumber": false,
-  "showIndentGuide": false,
+  "showIndentGuide": true,
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "Anexos"
 }
