--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,5 +2,11 @@
   "showLineNumber": false,
   "showIndentGuide": true,
   "alwaysUpdateLinks": true,
-  "attachmentFolderPath": "Anexos"
+  "attachmentFolderPath": "Anexos",
+  "pdfExportSettings": {
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
